# hermeschain

./: .dockerignore  .env.example  .gitignore  .prettierignore  BACKEND_IMPLEMENTATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  commitlint.config.js  deploy-railway.sh  deploy.sh  docker-compose.yml  justfile  nginx.conf  package.json  railway.json  start.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  security.md
.github/workflows/: bundle-budget.yml  ci.yml  codeql.yml  npm-audit.yml  pace.yml  secrets-scan.yml  snyk.yml
.hermes/: README.md  tasklist.yml
.well-known/: atproto-did  humans.txt  openpgp-policy.md
backend/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
backend/scripts/: audit-redis-ttl.js  backup-db.js  bulk-keys.js  generate-rss.js  (+7 more)
cli/: package.json
config/: cors.example.json  feature-flags.example.json
docker/: railway-cd-shim
docs/: ARCHITECTURE.md  extension-publishing.md  extension-store-listing.md  faq.md  glossary.md  roadmap.md
extension/: PRIVACY.md  README.md  build.mjs  package-lock.json  package.json  tsconfig.json
frontend/: index.html  package-lock.json  package.json
notifiers/: email.md  slack.md  sms.md  webhook.md
runbooks/: agent-stuck.md  anthropic-quota-hit.md  chain-halted.md  db-down.md  disk-full.md  full-disk.md  migration-failure.md  peer-partition.md  redis-down.md  replica-skew.md
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
(+936 files in other folders)
